Update Multiple Correspondence Analysis.ipynb

--- a/MultipleCorrespondenceAnalysis/Multiple Correspondence Analysis.ipynb
+++ b/MultipleCorrespondenceAnalysis/Multiple Correspondence Analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Multiple Correspondence Analysis\n",
-    "This notebook describes and implements the correspondence analysis in python. The formulas comes from the paper\n",
+    "This notebook describes and implements the multiple correspondence analysis in python. The formulas comes from the paper\n",
     "[Computation of Multiple Correspondence Analysis, with code in R by Oleg Nenadic](https://core.ac.uk/download/pdf/6591520.pdf)\n",
     "\n",
     "### Multiple correspondence analysis (MCA) is essentially the application of the simple correspondence analysis (CA) algorithm to multivariate categorical data coded in the form of an indicator matrix or a Burt matrix (see, for example, Greenacre, 1984, 1993, 2005). Blasius and Greenacre (1994) described in detail the computations involved in CA.\n",
